Added copyright to footer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </main>
   <footer class="sticky" id="footer">
-    footer
+    <p>Copyright &copy; 2022</p>
   </footer>
 </body>
 
